--- a/sem2_project/src/main/resources/application.properties
+++ b/sem2_project/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=sem2_project
+spring.datasource.url=jdbc:mysql://localhost:3306/java_connect_demo
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.jpa.hibernate.ddl-auto=update
+spring.datasource.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
