--- a/sem2_project/src/main/resources/application.properties
+++ b/sem2_project/src/main/resources/application.properties
@@ -1,7 +1,10 @@
 spring.application.name=sem2_project
-spring.datasource.url=jdbc:mysql://localhost:3306/java_connect_demo
+spring.datasource.url=jdbc:mysql://localhost:3306/sem2
 spring.datasource.username=root
-spring.datasource.password=
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.jpa.hibernate.ddl-auto=update
-spring.datasource.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
+spring.datasource.password=chien
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
+server.port=8088
+
+jwt.secret=your_jwt_secret_key
+jwt.expiration=86400000
