--- a/sem2_project/src/main/resources/application.properties
+++ b/sem2_project/src/main/resources/application.properties
@@ -3,8 +3,8 @@ spring.datasource.url=jdbc:mysql://localhost:3306/sem2
 spring.datasource.username=root
 spring.datasource.password=chien
 spring.jpa.hibernate.ddl-auto=none
-spring.jpa.show-sql=true
-server.port=8088
+spring.jpa.show-sql=false
+server.port=8080
 
-jwt.secret=your_jwt_secret_key
-jwt.expiration=86400000
+jwt.secret=My_Old_Love_Are_Le_Ngoc_Anh
+jwt.expiration=864000000
