--- a/sem2_project/pom.xml
+++ b/sem2_project/pom.xml
@@ -83,6 +83,12 @@
             <artifactId>mapstruct-processor</artifactId>
             <version>1.5.5.Final</version>
         </dependency>
+        <dependency>
+            <groupId>com.cloudinary</groupId>
+            <artifactId>cloudinary-http44</artifactId>
+            <version>1.33.0</version>
+        </dependency>
+
 
     </dependencies>
 
