--- a/sem2_project/src/main/resources/application.properties
+++ b/sem2_project/src/main/resources/application.properties
@@ -8,4 +8,10 @@ server.port=8080
 jwt.secret=My_Old_Love_Are_Le_Ngoc_Anh
 jwt.expiration=864000000
 
-
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=black4ngel1998@gmail.com
+spring.mail.password=gsbo ejbm tncv gddc
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
