--- a/sem2_project/src/main/resources/application.properties
+++ b/sem2_project/src/main/resources/application.properties
@@ -5,7 +5,11 @@ spring.datasource.password=chien
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=false
 server.port=8080
+
 jwt.secret=My_Old_Love_Are_Le_Ngoc_Anh
 jwt.expiration=864000000
+
+spring.devtools.restart.enabled=true
+
 
 
