--- a/sem2_project/pom.xml
+++ b/sem2_project/pom.xml
@@ -89,6 +89,11 @@
             <version>1.33.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <version>3.3.2</version>
+        </dependency>
 
     </dependencies>
 
