--- a/sem2_project/src/main/resources/application.properties
+++ b/sem2_project/src/main/resources/application.properties
@@ -11,5 +11,14 @@ jwt.expiration=864000000
 
 spring.devtools.restart.enabled=true
 
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=black4ngel1998@gmail.com
+spring.mail.password=dqim lwfa hegd nfdx
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+
+
 
 
